fixed navbar spacing

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -70,3 +70,5 @@
 .card:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
+@media only screen and (max-width: 800px){nav{margin-top: 125px !important;}}
